Adição dos atributos das ferramentas de desenho à entidade linha de produção [Implementação] [refs #4]

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,9 @@
   "ConnectionStrings": {
     "Database": "Server=tcp:bd-lapr5.database.windows.net,1433;Initial Catalog=lapr5;Persist Security Info=False;User ID=administrador;Password=lapr5-19;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "DimensoesFabrica":{
+    "Comprimento": 40,
+    "Largura": 80
+  },
   "AllowedHosts": "*"
 }
